XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 4.7.1
    • Qt Creator 4.7.0
    • Editors
    • None
    • Based on Qt 5.11.1 (Clang 8.0 (Apple), 64 bit)
      Built on Jul 17 2018 04:23:31
      From revision dedbb40f57
    • e3a0a710c62638ad3d2361d8037aa456a3adc9e0

      I doubt this will be easily reproducible (I was just editing a float literal in C++), but I'm creating it in case someone hits the same issue and searches for the same function in the stack trace.

      Exception Type:        EXC_BAD_ACCESS (SIGSEGV)
      Exception Codes:       EXC_I386_GPFLT
      Exception Note:        EXC_CORPSE_NOTIFY
      
      Termination Signal:    Segmentation fault: 11
      Termination Reason:    Namespace SIGNAL, Code 0xb
      Terminating Process:   exc handler [0]
      
      Thread 0 Crashed:: Dispatch queue: com.apple.main-thread
      0   libc++abi.dylib               	0x00007fff7b0c22c8 __dynamic_cast + 29
      1   libTextEditor.dylib           	0x000000010d943f16 TextEditor::CodeAssistantPrivate::eventFilter(QObject*, QEvent*) + 118
      2   org.qt-project.QtCore         	0x0000000106e56832 QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) + 210
      3   org.qt-project.QtWidgets      	0x00000001061abefd QApplicationPrivate::notify_helper(QObject*, QEvent*) + 285
      4   org.qt-project.QtWidgets      	0x00000001061ad43c QApplication::notify(QObject*, QEvent*) + 908
      5   org.qt-project.QtCore         	0x0000000106e5654f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159
      6   org.qt-project.QtWidgets      	0x0000000106205084 0x10619c000 + 430212
      7   org.qt-project.QtWidgets      	0x00000001061abf12 QApplicationPrivate::notify_helper(QObject*, QEvent*) + 306
      8   org.qt-project.QtWidgets      	0x00000001061ad2ed QApplication::notify(QObject*, QEvent*) + 573
      9   org.qt-project.QtCore         	0x0000000106e5654f QCoreApplication::notifyInternal2(QObject*, QEvent*) + 159
      10  org.qt-project.QtGui          	0x000000010677a4e5 QGuiApplicationPrivate::processKeyEvent(QWindowSystemInterfacePrivate::KeyEvent*) + 165
      11  org.qt-project.QtGui          	0x00000001067618bb QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 155
      12  org.qt-project.QtGui          	0x000000010675d320 QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 576
      13  libqcocoa.dylib               	0x00000001093d9620 0x1093b7000 + 140832
      14  libqcocoa.dylib               	0x00000001093d97e8 0x1093b7000 + 141288
      15  com.apple.AppKit              	0x00007fff5318d43d -[NSWindow(NSEventRouting) _reallySendEvent:isDelayedEvent:] + 5040
      16  com.apple.AppKit              	0x00007fff5318bc70 -[NSWindow(NSEventRouting) sendEvent:] + 497
      17  libqcocoa.dylib               	0x00000001093dde10 0x1093b7000 + 159248
      18  com.apple.AppKit              	0x00007fff52fed236 -[NSApplication(NSEvent) sendEvent:] + 2462
      19  libqcocoa.dylib               	0x00000001093e440a 0x1093b7000 + 185354
      20  com.apple.AppKit              	0x00007fff5284d8b5 -[NSApplication run] + 812
      21  libqcocoa.dylib               	0x00000001093e0a8d 0x1093b7000 + 170637
      22  org.qt-project.QtCore         	0x0000000106e520a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      23  org.qt-project.QtCore         	0x0000000106e56c62 QCoreApplication::exec() + 402
      24  org.qt-project.qtcreator      	0x0000000105ef6a26 main + 14390
      25  libdyld.dylib                 	0x00007fff7d0fe015 start + 1
      
      Thread 1:: com.apple.CFSocket.private
      0   libsystem_kernel.dylib        	0x00007fff7d24ecf2 __select + 10
      1   com.apple.CoreFoundation      	0x00007fff552f888b __CFSocketManager + 635
      2   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      3   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      4   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 2:: Qt bearer thread
      0   libsystem_kernel.dylib        	0x00007fff7d25009a poll + 10
      1   org.qt-project.QtCore         	0x0000000106eab090 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 112
      2   org.qt-project.QtCore         	0x0000000106eac8c9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857
      3   org.qt-project.QtCore         	0x0000000106e520a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      4   org.qt-project.QtCore         	0x0000000106c9c101 QThread::exec() + 113
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 3:: QThread
      0   libsystem_kernel.dylib        	0x00007fff7d25009a poll + 10
      1   org.qt-project.QtCore         	0x0000000106eab240 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544
      2   org.qt-project.QtCore         	0x0000000106eac8c9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857
      3   org.qt-project.QtCore         	0x0000000106e520a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      4   org.qt-project.QtCore         	0x0000000106c9c101 QThread::exec() + 113
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 4:: QThread
      0   libsystem_kernel.dylib        	0x00007fff7d25009a poll + 10
      1   org.qt-project.QtCore         	0x0000000106eab240 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544
      2   org.qt-project.QtCore         	0x0000000106eac8c9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857
      3   org.qt-project.QtCore         	0x0000000106e520a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      4   org.qt-project.QtCore         	0x0000000106c9c101 QThread::exec() + 113
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 5:: QQmlThread
      0   libsystem_kernel.dylib        	0x00007fff7d25009a poll + 10
      1   org.qt-project.QtCore         	0x0000000106eab240 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544
      2   org.qt-project.QtCore         	0x0000000106eac8c9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857
      3   org.qt-project.QtCore         	0x0000000106e520a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      4   org.qt-project.QtCore         	0x0000000106c9c101 QThread::exec() + 113
      5   org.qt-project.QtQml          	0x00000001075c7ed9 0x107397000 + 2297561
      6   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      7   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      8   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      9   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 6:: QQmlThread
      0   libsystem_kernel.dylib        	0x00007fff7d25009a poll + 10
      1   org.qt-project.QtCore         	0x0000000106eab240 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544
      2   org.qt-project.QtCore         	0x0000000106eac8c9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857
      3   org.qt-project.QtCore         	0x0000000106e520a2 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418
      4   org.qt-project.QtCore         	0x0000000106c9c101 QThread::exec() + 113
      5   org.qt-project.QtQml          	0x00000001075c7ed9 0x107397000 + 2297561
      6   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      7   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      8   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      9   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 7:: com.apple.NSEventThread
      0   libsystem_kernel.dylib        	0x00007fff7d24520a mach_msg_trap + 10
      1   libsystem_kernel.dylib        	0x00007fff7d244724 mach_msg + 60
      2   com.apple.CoreFoundation      	0x00007fff552be785 __CFRunLoopServiceMachPort + 341
      3   com.apple.CoreFoundation      	0x00007fff552bdad7 __CFRunLoopRun + 1783
      4   com.apple.CoreFoundation      	0x00007fff552bd153 CFRunLoopRunSpecific + 483
      5   com.apple.AppKit              	0x00007fff52995fc4 _NSEventThread + 184
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 8:: QmlJSEditor::Internal::SemanticInfoUpdater
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6c7b 0x106c78000 + 191611
      3   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      4   libQmlJSEditor.dylib          	0x0000000114df9922 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 9:: QmlJSEditor::Internal::SemanticInfoUpdater
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6c7b 0x106c78000 + 191611
      3   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      4   libQmlJSEditor.dylib          	0x0000000114df9922 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 10:: QmlJSEditor::Internal::SemanticInfoUpdater
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6c7b 0x106c78000 + 191611
      3   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      4   libQmlJSEditor.dylib          	0x0000000114df9922 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 11:: QmlJSEditor::Internal::SemanticInfoUpdater
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6c7b 0x106c78000 + 191611
      3   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      4   libQmlJSEditor.dylib          	0x0000000114df9922 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 12:: QmlJSEditor::Internal::SemanticInfoUpdater
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6c7b 0x106c78000 + 191611
      3   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      4   libQmlJSEditor.dylib          	0x0000000114df9922 QmlJSEditor::Internal::SemanticInfoUpdater::run() + 162
      5   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      6   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      7   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      8   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 13:
      0   libsystem_pthread.dylib       	0x00007fff7d415bdc start_wqthread + 0
      1   ???                           	0x0002000200000000 0 + 562958543355904
      
      Thread 14:
      0   libsystem_pthread.dylib       	0x00007fff7d415bdc start_wqthread + 0
      1   ???                           	0x00007fffb5bec060 _Block_destructInstance + 8
      
      Thread 15:
      0   libsystem_pthread.dylib       	0x00007fff7d415bdc start_wqthread + 0
      1   com.apple.CoreFoundation      	0x00007fff552d2a00 -[_CFXNotificationTokenRegistration isRegistered] + 32
      
      Thread 16:: Thread (pooled)
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6f10 0x106c78000 + 192272
      3   org.qt-project.QtCore         	0x0000000106ca6c5b 0x106c78000 + 191579
      4   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      5   org.qt-project.QtCore         	0x0000000106c9d0be 0x106c78000 + 151742
      6   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      7   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      8   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      9   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 17:: Thread (pooled)
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6f10 0x106c78000 + 192272
      3   org.qt-project.QtCore         	0x0000000106ca6c5b 0x106c78000 + 191579
      4   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      5   org.qt-project.QtCore         	0x0000000106c9d0be 0x106c78000 + 151742
      6   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      7   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      8   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      9   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 18:: Thread (pooled)
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6f10 0x106c78000 + 192272
      3   org.qt-project.QtCore         	0x0000000106ca6c5b 0x106c78000 + 191579
      4   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      5   org.qt-project.QtCore         	0x0000000106c9d0be 0x106c78000 + 151742
      6   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      7   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      8   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      9   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 19:: Thread (pooled)
      0   libsystem_kernel.dylib        	0x00007fff7d24ea16 __psynch_cvwait + 10
      1   libsystem_pthread.dylib       	0x00007fff7d417589 _pthread_cond_wait + 732
      2   org.qt-project.QtCore         	0x0000000106ca6f10 0x106c78000 + 192272
      3   org.qt-project.QtCore         	0x0000000106ca6c5b 0x106c78000 + 191579
      4   org.qt-project.QtCore         	0x0000000106ca6c12 QWaitCondition::wait(QMutex*, unsigned long) + 162
      5   org.qt-project.QtCore         	0x0000000106c9d0be 0x106c78000 + 151742
      6   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      7   libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      8   libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      9   libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      
      Thread 20:: TextEditor::Internal::ProcessorRunner
      0   org.qt-project.QtCore         	0x0000000106cf0e64 qHash(QString const&, unsigned int) + 180
      1   libUtils.4.7.0.dylib          	0x0000000105fea265 qHash(Utils::FileName const&) + 69
      2   libCPlusPlus.4.7.0.dylib      	0x000000010e8834fb CPlusPlus::DependencyTable::build(CPlusPlus::Snapshot const&) + 1019
      3   libCPlusPlus.4.7.0.dylib      	0x000000010e852257 CPlusPlus::Snapshot::filesDependingOn(Utils::FileName const&) const + 39
      4   libCppTools.dylib             	0x000000010e6abf26 CppTools::TypeHierarchyBuilder::filesDependingOn(CPlusPlus::Symbol*) const + 118
      5   libCppTools.dylib             	0x000000010e6aad56 CppTools::TypeHierarchyBuilder::buildDerivedTypeHierarchy() + 70
      6   libCppTools.dylib             	0x000000010e68f0a1 CppTools::FunctionUtils::overrides(CPlusPlus::Function*, CPlusPlus::Class*, CPlusPlus::Class*, CPlusPlus::Snapshot const&) + 177
      7   libCppTools.dylib             	0x000000010e68bbe8 CppTools::VirtualFunctionAssistProcessor::perform(TextEditor::AssistInterface const*) + 168
      8   libTextEditor.dylib           	0x000000010d945e11 TextEditor::Internal::ProcessorRunner::run() + 33
      9   org.qt-project.QtCore         	0x0000000106ca5657 0x106c78000 + 185943
      10  libsystem_pthread.dylib       	0x00007fff7d416661 _pthread_body + 340
      11  libsystem_pthread.dylib       	0x00007fff7d41650d _pthread_start + 377
      12  libsystem_pthread.dylib       	0x00007fff7d415bf9 thread_start + 13
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes